update origin master

--- a/server/Untitled.ipynb
+++ b/server/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,41 +14,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('./KBoard-Backup-20180701.xml', encoding='utf-8') as f:\n",
-    "    content = f.read()\n",
-    "bs = BeautifulSoup(content, 'xml')\n",
-    "datas = bs.select('data')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_newses(datas, iter_=0):\n",
+    "def get_posts(iter_=0):\n",
     "    \n",
-    "    news_datas = [\n",
+    "    with open('./KBoard-Backup-20180701.xml', encoding='utf-8') as f:\n",
+    "        content = f.read()\n",
+    "    bs = BeautifulSoup(content, 'xml')\n",
+    "    datas = bs.select('data')\n",
+    "    \n",
+    "    post_datas = [\n",
     "        data for data in datas\n",
     "        if data.board_id\n",
-    "        and data.board_id.text == '7'\n",
+    "        and (data.board_id.text == '7' or data.board_id.text == '4')\n",
     "        and data.uid\n",
     "    ]\n",
     "    \n",
-    "    def get_news(data):\n",
+    "    idx2category = {\n",
+    "        '4': 'photo',\n",
+    "        '7': 'news'\n",
+    "    }\n",
+    "    \n",
+    "    def get_post(data):\n",
     "        images = [\n",
     "            data_.file_path.text for data_ in datas\n",
     "            if data_.content_uid\n",
     "            and data_.content_uid.text == data.uid.text\n",
     "        ]\n",
     "        nonlocal iter_\n",
-    "        news = {\n",
+    "        post = {\n",
     "            'id': iter_,\n",
-    "            'category': 'news',\n",
+    "            'category': idx2category[data.board_id.text],\n",
     "            'date': data.date.text,\n",
     "            'view_count': data.view.text,\n",
     "            'thumbnail': data.thumbnail_file.text,\n",
@@ -58,23 +56,31 @@
     "            'images': images\n",
     "        }\n",
     "        iter_ += 1\n",
-    "        return news\n",
+    "        return post\n",
     "    \n",
-    "    newses = [get_news(data) for data in news_datas]\n",
+    "    posts = [get_post(data) for data in post_datas]\n",
     "    \n",
-    "    return newses\n",
-    "\n",
-    "newses = get_newses(datas)\n",
-    "with open('./news.json', 'w') as f:\n",
-    "    json.dump(newses, f)"
+    "    return posts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "posts = get_posts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./post.json', 'w') as f:\n",
+    "    json.dump(posts, f)"
+   ]
   },
   {
    "cell_type": "code",
